Finalisierung SimpleDocument Package